--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
     }
 
     body {
-      position: relative;
+      position: fixed;
+      width: 100%;
+      height: 100%;
       font-family: 'Open Sans', sans-serif;
     }
 
@@ -80,6 +82,7 @@
       margin: 0;
     }
   </style>
+  <script src="https://player.twitch.tv/js/embed/v1.js"></script>
 </head>
 
 <body>
