--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       width: 100%;
       height: 100%;
       font-family: 'Open Sans', sans-serif;
+      background-color: #0a090a;
     }
 
     a {
