--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
     }
   </style>
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
